update screen layout home page and service list to be 2 style

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,6 +4,9 @@
   font-family: "IBM Plex Sans", sans-serif;
   font-style: normal;
 }
+body {
+  background-color: #fffffe;
+}
 $xs-breakpoint: 718px;
 $sm-breakpoint: 1024px;
 $md-breakpoint: 1439px;
