--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -23,4 +23,4 @@ $positive: #21ba45;
 $negative: #c10015;
 $info: #31ccec;
 $warning: #f2c037;
-$buttonnooutlinecolr: #61c161;
+$buttonnooutlinecolr: rgba(255, 0, 0, 0.5);
